syntax = "proto3";

package auth;

option go_package = "./";

service authService {
    rpc Login(LoginRequest)returns(LoginResponse);
    rpc Signup(SignupRequest)returns(SignupResponse);
    rpc ValidateToken(ValidateTokenRequest)returns(ValidateTokenResponse);
}

message LoginRequest{
    string email = 1;
    string password = 2;
}

message LoginResponse{
    Response response = 1;
    string token = 2;
}

message SignupRequest{
    string email = 1;
    string password = 2;
}

message SignupResponse{
    Response response = 1;
}

message ValidateTokenRequest{
    string token = 1;
}

message ValidateTokenResponse{
    bool valid = 1;
    Response response = 2;
}

message Response {
    int64 code = 1;
    string message = 2;
}